# EFTA

./: .env.example  .gitignore  CLAUDE.md
infrastructure/: setup.sh
pipeline/: Dockerfile  pyproject.toml
pipeline/src/pipeline/: __init__.py  config.py
pipeline/src/pipeline/api/: __init__.py  app.py
pipeline/src/pipeline/db/: firestore_client.py  models.py
pipeline/src/pipeline/embeddings/: __init__.py  chunker.py  gemini_embedder.py  local_embedder.py
pipeline/src/pipeline/entities/: __init__.py  extractor.py
pipeline/src/pipeline/extraction/: entity_resolver.py  llm_extractor.py  prompts.py  schema.py
pipeline/src/pipeline/jobs/: build_index.py  classify_documents.py  extract_entities.py  group_exhibits.py  import_firestore.py  local_ingest.py  probe_text_extraction.py  run_extraction.py  run_ocr.py  run_scraper.py  run_vision.py  survey_data_sets.py  test_local_pipeline.py  wayback_urls.py
pipeline/src/pipeline/local_storage/: __init__.py  paths.py  sqlite_store.py
pipeline/src/pipeline/ocr/: audio_transcriber.py  processor.py  text_store.py
pipeline/src/pipeline/privacy/: redactor.py  victim_tracker.py
pipeline/src/pipeline/scraper/: base_scraper.py  doj_scraper.py  dropbox_scraper.py  sequential_scraper.py
pipeline/src/pipeline/text_extraction/: pdf_text_extractor.py
pipeline/src/pipeline/vision/: embeddings.py  processor.py  prompts.py  property_resolver.py  resolver.py  schema.py
web/: package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/auth/verify/: page.tsx
web/src/app/doc/[docId]/: page.tsx
web/src/app/login/: page.tsx
web/src/app/timeline/: page.tsx
web/src/components/: HeaderAuth.tsx  Notepad.tsx  ThemeToggle.tsx
web/src/lib/: api.ts  auth.tsx
